# Image-Processing

./: tempCodeRunnerFile.py  test.py  test2.py
Assignment1/: Assignment 1.docx  main3.py
Assignment1/C++/: CMakeLists.txt  main.cpp
Assignment2/: Assignment 2.docx  main1.py  main2.py  main3.py  ~$signment 2.docx  ~WRL2932.tmp
Assignment3/: Assignment 3.docx  main1.py  main2.a.py  main2.b.py  test.py  testNumpy.py
Assignment4/: Assignment 4.docx  changeColorToGray.py  main1.py  main2.py  main3Butterworth.py  main3Gaussian.py  main3_horizontal_cleaner.py  main3_vertical.py  main3_vertical_cleaner.py  tempCodeRunnerFile.py  testMain1_ShowMagnitude.py  testMain2_2.py  testMain2_ShowMagnitude.py  testMain3_2.py  testMain3_3.py  testNumpy.py
Assignment5/: Assignment 5.docx  main1.py  main2.py  main2_3.py  test.py
ImageEnhanceFunction/: RGB_to_HSI.py  average_filter.py  change_color_to_gray.py  gamma_correction.py  gaussian_lpf_hpf.py  global_histogram_equalization.py  histogram.py  laplacian_filter.py  local_histogram_equalization.py  map_to_gray.py  median_filter.py  notch_filter.py  notch_reject_filter.py  power-law.py  sobel_gradient_filter.py  spatial_to_frequency.py
Lab1/: grayScaleAsset.py  main1.py  main2.py  tempCodeRunnerFile.py  test3.2.py  test8graylevels.py
Term Project/: 6434486123 Term-Project.docx  main.py  main2.py  main3.py  main_1,2,4_with_pyplt.py  main_3_with_pyplt.py  main_7_with_pyplt.py  main_8_with_pyplt.py  main_for_1,2,4.py  main_for_3.py  main_for_7.py  main_for_8.py  test_main_for_3.py  test_main_for_7.py  test_main_for_8.py
(+9 files in other folders)
